force-app/main/default/objects/LLC_BI__Product_Program_History_Detail__c/LLC_BI__Product_Program_History_Detail__c.object-meta.xml
<CustomObject>
    <label>Product Program History Detail</label>
    <nameField>
        <label>Product Program History Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Program History Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>