force-app/main/default/objects/LLC_BI__Product_Program_History_Detail__c/fields/LLC_BI__Attribute_Value__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Attribute_Value__c</fullName>
    <description>This field is currently not used because the product program selector feature is not being used. Logs the attribute value that was used with this history record.</description>
    <label>Attribute Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>