force-app/main/default/objects/LLC_BI__Product_Program_History_Detail__c/fields/LLC_BI__Product_Program__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is currently not used because the product program selector feature is not being used. Logs the related product program that was used with this history record.</description>
    <label>Product Program</label>
    <referenceTo>LLC_BI__Product_Program__c</referenceTo>
    <relationshipLabel>Product Program History Details</relationshipLabel>
    <relationshipName>Product_Program_History_Details</relationshipName>
    <type>Lookup</type>
</CustomField>